api/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      name: api
      labels:
        app: api
        version: v1
    spec:
      containers:
        - name: api
          image: ntunghoi/api
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9080
---
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
spec:
  ports:
    - port: 8080
      targetPort: 9080
      name: http
  selector:
    app: api
