api/k8s/istio-rules.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: api-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "api.ntunghoi.com"
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: api-service-destination
spec:
  host: api-service
  subsets:
    - name: v1
      labels:
        version: v1
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: api-service-route
spec:
  hosts:
    - "api.ntunghoi.com"
  gateways:
    - api-gateway
  http:
    - route:
        - destination:
            host: api
            port:
              number: 8080
